--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-aio-pika>=3.2.2,<6.9.0
-fastapi>=0.47.0,<0.78.0
+fastapi>=0.47.0,<=0.89.1
 filelock>=3.0.0,<3.10.0
-nltk>=3.2.5,<3.10.0
+nltk>=3.2.4,<3.10.0
 numpy<1.24
-overrides==4.1.2
+overrides==6.5.0
 pandas>=1.0.0,<1.6.0
-prometheus-client>=0.13.0,<0.15.0
+prometheus-client>=0.13.0,<=1.16.0
 pydantic
-pybind11==2.2.4
+pybind11==2.10.3
 requests>=2.19.0,<3.0.0
 scikit-learn>=0.24,<1.1.0
 scipy<1.10.0
