fix: nvidia keys

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,5 +1,8 @@
 FROM deeppavlov/base-gpu:0.12.0
 
+RUN apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
+RUN apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub
+
 WORKDIR /app
 
 RUN apt update && \
