--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pydantic
 pybind11==2.10.3
 requests>=2.19.0,<3.0.0
 scikit-learn>=0.24,<1.1.0
-scipy<1.10.0
+scipy==1.10.0
 tqdm>=4.42.0,<4.65.0
 uvicorn>=0.13.0,<0.19.0
 wheel
