--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,12 +1,7 @@
 # .readthedocs.yml
 
+version: 2
 build:
-  image: latest
-
-formats: []
-
-python:
-  pip_install: true
-  version: 3.6
-  extra_requirements:
-        - docs
+  os: "ubuntu-20.04"
+  tools:
+    python: "3.10"
