--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,11 +2,11 @@
 
 build:
   os: "ubuntu-20.04"
-
+  tools:
+    python: "3.10"
 formats: []
 
 python:
   pip_install: true
-  version: 3.6
   extra_requirements:
-        - docs
+    - docs
