--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ prometheus-client>=0.13.0,<=1.16.0
 pydantic<2
 pybind11==2.10.3
 requests>=2.19.0,<3.0.0
-scikit-learn>=0.24,<1.1.0
+scikit-learn>=0.24,<1.1.0;python_version<="3.10.*"
 scikit-learn==1.4.0;python_version=="3.11.*"
 tqdm>=4.42.0,<4.65.0
 uvicorn>=0.13.0,<0.19.0
